[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scenes/Labyrinth/labyrinth.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Rat/rat.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Rat/rat2.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/player_kamera/Camera_player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sounds/Musik/Game/Game Music.ogg" type="AudioStream" id=5]
[ext_resource path="res://Scenes/conami_autoload.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Level/level-jonathan/laser/laser.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Level/level-jonathan/level-jonathan.gd" type="Script" id=8]
[ext_resource path="res://Sounds/SFX/Effects/Laser/Laser-1.wav" type="AudioStream" id=9]
[ext_resource path="res://Sounds/SFX/Effects/Laser/Laser-6.wav" type="AudioStream" id=10]
[ext_resource path="res://Sounds/SFX/Effects/Laser/Laser-3.wav" type="AudioStream" id=11]
[ext_resource path="res://Sounds/SFX/Effects/Laser/Laser-2.wav" type="AudioStream" id=12]
[ext_resource path="res://Sounds/SFX/Effects/Laser/Laser-5.wav" type="AudioStream" id=13]
[ext_resource path="res://Sounds/SFX/Effects/Laser/Laser-4.wav" type="AudioStream" id=14]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1.03165, 0.667739, 0.329303 )

[sub_resource type="Animation" id=2]
resource_name = "linght_blink_green"
tracks/0/type = "value"
tracks/0/path = NodePath("OmniLight:light_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 0, 1, 0, 1 ), Color( 0, 1, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("OmniLight:light_energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 0.7, 1 ),
"transitions": PoolRealArray( 2, 1, 0.129408, 1 ),
"update": 0,
"values": [ 0.0, 16.0, 16.0, 0.0 ]
}

[sub_resource type="Animation" id=3]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("OmniLight:light_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.180392, 0, 1 ), Color( 1, 0.180392, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("OmniLight:light_energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 6.27668, 1, 0.101532, 1 ),
"update": 0,
"values": [ 0.0, 16.0, 16.0, 0.0 ]
}

[node name="level-jonathan" type="Spatial"]
script = ExtResource( 8 )

[node name="Camera_player" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0199528, -3.8147e-06, -0.0360804 )

[node name="rat" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, -2 )

[node name="StaticBody" type="StaticBody" parent="rat"]
collision_layer = 2
collision_mask = 2

[node name="laser_collision" type="CollisionShape" parent="rat/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.250823, 0.527562, 0 )
shape = SubResource( 1 )

[node name="OmniLight" type="OmniLight" parent="rat"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.19873, 0 )
light_color = Color( 1, 0, 0, 1 )
light_energy = 0.0
shadow_enabled = true
omni_range = 20.0
omni_attenuation = 0.63728

[node name="AnimationPlayer" type="AnimationPlayer" parent="rat"]
anims/linght_blink_green = SubResource( 2 )
anims/linght_blink_red = SubResource( 3 )

[node name="rat2" parent="." instance=ExtResource( 3 )]
visible = false

[node name="labyrinth" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0069828, -0.3695, -0.00864792 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.924274, 0.0611146, 0.376805, -0.303632, 0.715954, 0.628664, -0.231355, -0.695467, 0.680294, 6.90428, 11.1312, -12.6365 )
light_energy = 0.3
shadow_enabled = true
directional_shadow_normal_bias = 0.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="easter_eggs_script" type="Node" parent="."]
script = ExtResource( 6 )

[node name="lasers" type="Spatial" parent="."]

[node name="laser1" parent="lasers" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.04093, 0.2, -5.86235 )
laenge = 4
farbe = Color( 0, 0, 1, 0.4 )
hide_when_used = true
laser_art = 5

[node name="laser2" parent="lasers" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -12.5213, 0.2, -5.89395 )
laenge = 4
farbe = Color( 1, 0, 0, 0.4 )
hide_when_used = true
laser_art = 2

[node name="ansagen" type="Node2D" parent="."]

[node name="Tween" type="Tween" parent="ansagen"]

[node name="Popup_start" type="Popup" parent="ansagen"]
margin_right = 120.0
margin_bottom = 107.0
popup_exclusive = true

[node name="ansage_start" type="RichTextLabel" parent="ansagen/Popup_start"]
margin_left = 262.913
margin_top = 162.437
margin_right = 626.913
margin_bottom = 327.437
text = "Hey little rat,
I have a new mission for you...

Hear I have a sound for you. Can you hear it?
Yeah, it is a LASER. Find this laser for me. "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup_mission2" type="Popup" parent="ansagen"]
margin_right = 120.0
margin_bottom = 107.0
popup_exclusive = true

[node name="ansage_start" type="RichTextLabel" parent="ansagen/Popup_mission2"]
margin_left = 262.913
margin_top = 162.437
margin_right = 626.913
margin_bottom = 327.437
text = "Okay...
You could have been faster...

But, haha, you're only a stupid little rat.

A rat won't be able to make my next mission:
2 sounds; you have to find the lasers in the right order.

Good luck"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup_mission_failed" type="Popup" parent="ansagen"]
margin_right = 120.0
margin_bottom = 107.0
popup_exclusive = true

[node name="ansage_failed" type="RichTextLabel" parent="ansagen/Popup_mission_failed"]
margin_left = 262.913
margin_top = 162.437
margin_right = 626.913
margin_bottom = 327.437
text = "This was the wrong laser.

You can be happy, that "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="laser_sounds" type="Node" parent="."]

[node name="1" type="AudioStreamPlayer" parent="laser_sounds"]
stream = ExtResource( 9 )

[node name="2" type="AudioStreamPlayer" parent="laser_sounds"]
stream = ExtResource( 12 )

[node name="3" type="AudioStreamPlayer" parent="laser_sounds"]
stream = ExtResource( 11 )

[node name="4" type="AudioStreamPlayer" parent="laser_sounds"]
stream = ExtResource( 14 )

[node name="5" type="AudioStreamPlayer" parent="laser_sounds"]
stream = ExtResource( 13 )

[node name="6" type="AudioStreamPlayer" parent="laser_sounds"]
stream = ExtResource( 10 )
[connection signal="animation_finished" from="rat/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="tween_completed" from="ansagen/Tween" to="." method="_on_Tween_tween_completed"]
